<resources>
    <string name="app_name">KeepCount</string>


    <string name="action_settings">Settings</string>
    <string name="action_about">Aboutv</string>
    <string name="plusone">+ 1</string>
    <string name="plusfive">+ 5</string>
    <string name="plusten">+ 10</string>
    <string name="minusfive">- 5</string>
    <string name="minusten">- 10</string>
    <string name="clr">Clear</string>
    <string name="undo">Undo</string>
    <string name="emptystack"></string>
    <string name="minone">- 1</string>
    <string name="minfive">- 5</string>
    <string name="minten">- 10</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="imagetest">test image</string>
</resources>
