<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="true">

    <Button

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/plusone"
        android:id="@+id/plusone"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusten"
        android:id="@+id/plusten"
        android:gravity="center_horizontal"
        android:layout_below="@+id/plusone"
        android:layout_alignEnd="@+id/plusone"
        android:layout_toEndOf="@+id/count" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusfive"
        android:id="@+id/plusfive"

        android:gravity="center_horizontal"
        android:layout_alignTop="@+id/plusten"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/count" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text = "--"
        android:id="@+id/count"
        android:textSize = "100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:text="KeepCount"
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="26sp"
        android:layout_gravity="center"
        android:textColor="#A476eec6"

        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clr"
        android:id="@+id/clr"
        android:clickable="true"
        android:layout_above="@+id/plusone"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo"
        android:id="@+id/undo"

        android:clickable="true"
        android:layout_above="@+id/plusone"
        android:layout_alignEnd="@+id/plusone" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/negateButton"
        android:layout_below="@+id/plusten"
        android:layout_centerHorizontal="true"
        android:checked="false" />


</RelativeLayout>
